--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -363,7 +363,7 @@ en:
     tcr: TCR
     close_btn: Close
     select-dim: Select Dimensions
-    fill_all_blank: Sta should not be blank
+    fill_all_blank: Star should not be blank
     detail:
       drag: Drag dimension or dimension value
       back: Back to Analytics
