--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -435,8 +435,8 @@ en:
       unit: Unit
       trend: Trend
       is_calculate_type: Is need calculate
-      not_calculate_type: No
-      calculate_type: Yes
+      not_calculate_type: N
+      calculate_type: Y
       list: Choose KPI
       formula: Formula
       invalid: Formula is not valid
