--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -444,7 +444,7 @@ en:
       ok: Create
       cancle: Cancle
       freq_item:
-        hourly: Houlry
+        hourly: Hourly
         daily: Daily
         weekly: Weekly
         monthly: Monthly
