--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -343,6 +343,7 @@ en:
     entry_kpi: KPI Entry
     department: Data Point
     entity: Department
+    story_set: StorySet
   analytics:
     title: Analytics
     kpi_category: KPI Category
