--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -346,6 +346,7 @@ zh:
       entry_kpi: KPI输入
       department: 输入点
       entity: 部门
+      story_set: StorySet
   analytics:
     title: 分析
     kpi_category: KPI类别
