--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -343,7 +343,8 @@ en:
     entry_kpi: KPI Entry
     department: Data Point
     entity: Department
-    story_set: StorySet
+    story_set: My Discussion
+    subscription: My Subscription
   analytics:
     title: Analytics
     kpi_category: KPI Category
@@ -661,3 +662,6 @@ en:
     target_max: Target Max
   user_message:
     add_to_story_set: You are added to story set
+  subscription:
+    subscription: Subscription
+    add: Add Sunscription
