--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -346,7 +346,8 @@ zh:
       entry_kpi: KPI输入
       department: 输入点
       entity: 部门
-      story_set: StorySet
+      story_set: 我的讨论组
+      subscription: 我的订阅
   analytics:
     title: 分析
     kpi_category: KPI类别
@@ -666,3 +667,6 @@ zh:
     target_max: 目标值上限
   user_message:
     add_to_story_set: 你被加入了讨论组
+  subscription:
+    subscription: 订阅
+    add: 添加订阅
