finish cstory comment

--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -667,7 +667,7 @@ zh:
     target_max: 目标值上限
   user_message:
     add_to_story_set: 你被加入了新讨论组
-    story_comment: 你的主题有新评论
+    story_comment: 你的主题有了新评论
   subscription:
     subscription: 订阅
     add: 添加订阅
