add message event

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -663,6 +663,11 @@ en:
   user_message:
     add_to_story_set: You are added to story set
     story_comment: Your story was commented
+    new_story: Your story set has new story
+  event_message:
+    add_to_story_set: add you to story set
+    story_comment: commit your sotry
+    new_story: create  anew story
   subscription:
     subscription: Subscription
     add: Add Sunscription
