--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -661,11 +661,11 @@ en:
     target_min: Target Min
     target_max: Target Max
   user_message:
-    add_to_story_set: You are added discussion
+    add_to_story_set: You are invited discussion
     story_comment: Your insight was commented
     new_story: Your discussion set has new insight
   event_message:
-    add_to_story_set: add you to disscussion
+    add_to_story_set: invited you to disscussion
     story_comment: commented your insight
     new_story: created a new insight
   subscription:
