--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -678,7 +678,8 @@ en:
       department: Department
       time: Time Range
       cal_type: Calculate Type
-      alert_type: Alert Type
+      alert_by: Alert by
+      alert_type: Alert When
       alert_type_exit: Same alert type exits
       start-time: Start Time
       end-time: End Time
