--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -675,7 +675,7 @@ zh:
     new_story: 新建了主题
   subscription:
     subscription: 订阅
-    add: 添加订阅
+    add: 订阅
     create: 添加
     cancel: 取消
     kpi: KPI
