--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -664,6 +664,7 @@ en:
     add_to_story_set: You are invited discussion
     story_comment: Your insight was commented
     new_story: Your discussion set has new insight
+    subscription_alert: Your KPI subscription has a new alert
   event_message:
     add_to_story_set: invited you to disscussion
     story_comment: commented your insight
