fix hour select error

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -411,7 +411,7 @@ en:
       next: Next
       finish: Finish
       assign_all_kpi: Assign All
-      fill-all-star: Star should not be empty
+      star: Star should not be empty
       not-empty: should not be empty
       fix-red: please fix the red input
       sth-wrong: Sorry, Something get wrong
