--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -400,6 +400,11 @@ en:
       value: Value
       del-error: Can not delete total value!
       del-success: Delete details successfully!
+      user-name: User Name
+      entity: Data Point
+      max: Max Target
+      min: Min Target
+      entry-at: KPI Input Time
     failure:
       system: System error, please contact ClearInsight staff
     success:
