--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -605,6 +605,8 @@ en:
         end_time: End Time
         total: Total
         average: Average
+        pieComparison: Compare
+        pieRatio: RATIO
         add: Add
       close: Close
 
